AAA-448-YouTube-Video-Text-Wrap-Bug - fixed word-wrap to correctly break on both mobile and desktop.

--- a/html-prototype/clientlibs/aaa-core/base/less/youtube-video.less
+++ b/html-prototype/clientlibs/aaa-core/base/less/youtube-video.less
@@ -5,7 +5,7 @@
 
 .yt-body-copy{
   margin-bottom: 70px;
-  word-break: break-all;
+  word-break: keep-all;
 }
 
 .videoWrapper {
